replace all single curly quotes

--- a/html/Description/802OM.html
+++ b/html/Description/802OM.html
@@ -1,2 +1,2 @@
-<p>Owner’s Manual - Air Tractor Model AT-802 and AT-802A- Agricultural, Fire-Fighting, Patrolling, and Surveying
+<p>Owner's Manual - Air Tractor Model AT-802 and AT-802A- Agricultural, Fire-Fighting, Patrolling, and Surveying
     Airplane Manual 03-0121.</p>
