--- a/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
+++ b/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
@@ -3,7 +3,7 @@
 <p>The initial rigging of the Aileron Boos Tabs is performed as follws:</p>
 <ol type='1'>
     <li>Lock the flight control stick in the neutral position using the cockpit control lock. Confirm that the ailerons
-        are in the neutral position and rigged in accordance with the aircraft Owner’s Manual.</li>
+        are in the neutral position and rigged in accordance with the aircraft Owner's Manual.</li>
 
     <li>Using a straight edged tool approximately 6 inches in length, check that the lower surface of the boost tab is
         in line with the lower surface of the aileron. Make this check within 4 inches of the boost tab control horn.
