--- a/html/Maintenance/Brake Bleeding.html
+++ b/html/Maintenance/Brake Bleeding.html
@@ -13,7 +13,7 @@
 
         <li>The cockpit man uses the procedure outlined in (1) to obtain a firm pedal and again repeats step (2) and (3). </li>
 
-        <li>The above procedure is repeated as many as a dozen or so times until a firm brake is obtained with the parking brake off.  Be sure to add brake fluid to the reservoir before the reservoir is emptied or else you will have to start all over again.  Don’t use the fluid in the bottle as it will have bubbles of air.  When the bubbles are gone and the fluid has been determined to be clean, it is OK to use, however. </li>
+        <li>The above procedure is repeated as many as a dozen or so times until a firm brake is obtained with the parking brake off.  Be sure to add brake fluid to the reservoir before the reservoir is emptied or else you will have to start all over again.  Don't use the fluid in the bottle as it will have bubbles of air.  When the bubbles are gone and the fluid has been determined to be clean, it is OK to use, however. </li>
 
         <li>Repeat the process for the other wheel. </li>
 
