--- a/html/Maintenance/Charging.html
+++ b/html/Maintenance/Charging.html
@@ -25,7 +25,7 @@
             reading on the
             low-pressure gauge is decreasing. If the gauges fail to behave as specified, turn the air
             conditioner master switch
-            OFF, stop the engine, and investigate the cause of the compressor’s failure to engage. If the gauges
+            OFF, stop the engine, and investigate the cause of the compressor's failure to engage. If the gauges
             behave
             properly, then charging can continue.</p>
         <p>Refrigerant is introduced into the low-pressure service valve while the compressor is operating. The
