--- a/html/Maintenance/Compressor Replacement.html
+++ b/html/Maintenance/Compressor Replacement.html
@@ -3,7 +3,7 @@
 <ol type="1">
     <li>Remove all refrigerant from the system using a Freon Recovery Unit (FRU).</li>
     <li>Remove the hose fittings at the rear of the compressor by first removing the bolt and strap that hold the T-head
-        clamp in place. The hose fittings can now be removed from the compressor’s head without tools.</li>
+        clamp in place. The hose fittings can now be removed from the compressor's head without tools.</li>
     <li>Separate the wrist-lock connector in the wire that powers the clutch.</li>
     <li>Loosen the nuts on the two AN5 pivot bolts that secure the compressor to the drive-shaft housing.</li>
     <li>Remove safety wire and loosen the belt-tension turnbuckle and remove belts.</li>
@@ -15,9 +15,9 @@
 </ol>
 
 <p class="dontBreakAfter"><b>Compressor Replacement</b></p>
-<p>It’s critical for successful compressor replacement that the new compressor is installed in a clean system with a
+<p>It's critical for successful compressor replacement that the new compressor is installed in a clean system with a
     correct oil charge. Contamination remaining in the system will be pulled into the new compressor and lodge under the
-    valves and in bearings causing quick failure of the new compressor. Also it’s important to maintain the original oil
+    valves and in bearings causing quick failure of the new compressor. Also it's important to maintain the original oil
     charge amount when replacing the compressor. </p>
 
 <p>To replace the compressor, the removal steps should be followed in the reverse order. <span style="color:red">The belts for the R12 system
