--- a/html/Maintenance/ENGINE DRIVEN AIR CONDITIONER.html
+++ b/html/Maintenance/ENGINE DRIVEN AIR CONDITIONER.html
@@ -9,7 +9,7 @@
     an electromagnetic clutch. </p>
 
 <p>The 53126-X compressor is factory-charged to the correct level with Sanden SP-15 oil. The initial oil charge is 210
-    cc. It is not necessary to check the compressor’s oil level as routine maintenance. The oil level must be checked
+    cc. It is not necessary to check the compressor's oil level as routine maintenance. The oil level must be checked
     when a system component has been replaced or if you think there is an oil leak. All refrigerant must be removed from
     the system (depressurized) before the oil is checked. </p>
 
