--- a/html/Maintenance/Elevator Controls.html
+++ b/html/Maintenance/Elevator Controls.html
@@ -10,7 +10,7 @@
 
 <p>To measure the amount of friction required conduct the following procedure: </p>
 
-<ol type=‘1’>
+<ol type='1'>
     <li>Remove the 71340-1 bolt that attaches the damper to the support bracket for the p/n 70117-1 or -7 elevator idler. </li>
     <li>Wrap a piece of safety wire around the top of the control stick just above the trigger and hook a small fish scale to the safety wire on the aft side of the stick grip.</li>
     <li>Measure the pounds of force required to move the control stick from the full forward position to the elevators neutral position. Flaps should be retracted.</li>
