--- a/html/Maintenance/Engine Instruments.html
+++ b/html/Maintenance/Engine Instruments.html
@@ -1,5 +1,5 @@
-<p>The NP Indicator, NG Indicator and the ITT Indicator are independent of the airplane’s electrical system. They are powered by their respective tach-generators or thermocouple. </p>
+<p>The NP Indicator, NG Indicator and the ITT Indicator are independent of the airplane's electrical system. They are powered by their respective tach-generators or thermocouple. </p>
 
-<p>The Fuel Filter Pressure Light, Low Oil Pressure Light, Oil Temperature Indicator, Air Filter Pressure Light, Chip Light, and Hour Meter are all powered by the airplane’s electrical system.</p>
+<p>The Fuel Filter Pressure Light, Low Oil Pressure Light, Oil Temperature Indicator, Air Filter Pressure Light, Chip Light, and Hour Meter are all powered by the airplane's electrical system.</p>
 
 <p>The wiring schematics for the engine instruments are shown in Figure 36. </p>
