--- a/html/Maintenance/Evacuation.html
+++ b/html/Maintenance/Evacuation.html
@@ -67,7 +67,7 @@
     <li>Vacuum Pump Service</li>
     <p>Vacuum pumps not receiving regular service will be unable to draw an adequate vacuum. In most cases
         simple changing
-        the pumps oil will correct the problem. Be sure to follow the manufacturer’s recommendations for any
+        the pumps oil will correct the problem. Be sure to follow the manufacturer's recommendations for any
         maintenance on
         your evacuation pump. Change the oil after use while the oil is still hot, because contaminants are
         still in
