--- a/html/Maintenance/Filling the Hopper Tanks.html
+++ b/html/Maintenance/Filling the Hopper Tanks.html
@@ -1,6 +1,6 @@
 <p>Normal filling of the hopper tanks is accomplished by use of either of the single point filling connections that are located below and aft of the inboard end of the wing flaps. </p>
 
-<p>In normal operations, spray solutions are pumped directly into the airplane’s hoppers from a remote storage tank. A male quick disconnect fitting and flow-control valve are provided at both of the single point filling connections. </p>
+<p>In normal operations, spray solutions are pumped directly into the airplane's hoppers from a remote storage tank. A male quick disconnect fitting and flow-control valve are provided at both of the single point filling connections. </p>
 
 <p>After a quick disconnect hose is attached to the filling connection, the filling valve is opened and the solution is pumped into the hopper tanks at a rate up to 500 gallons per minute. The quantity of material in the tanks can be monitored by use of the hopper quantity gauge that is mounted in the side of the fuselage, just above the single point connections. </p>
 
