--- a/html/Maintenance/Fuel Filter Cleaning.html
+++ b/html/Maintenance/Fuel Filter Cleaning.html
@@ -8,7 +8,7 @@
 
 <p>When the fuel filter bowl has been removed for cartridge inspection it must be remembered that the fuel lines from the engine fuel control to the header tank have been drained, and these lines will be air-locked if a start is attempted without first priming the lines with fuel. Use the electric boost pump for this. </p>
 
-<p>The engine also has a disposable fuel filter on the high pressure pump located at the 3 o’clock position on the accessory case. This element is an AN6235-3A. The filter should be changed anytime the firewall filter is found contaminated or every 300 hours. See the proper engine manual in INSTRUCTIONS FOR CONTINUED AIRWORHTINESS in Section 1 for details on removing and replacing this filter</p>
+<p>The engine also has a disposable fuel filter on the high pressure pump located at the 3 o'clock position on the accessory case. This element is an AN6235-3A. The filter should be changed anytime the firewall filter is found contaminated or every 300 hours. See the proper engine manual in INSTRUCTIONS FOR CONTINUED AIRWORHTINESS in Section 1 for details on removing and replacing this filter</p>
 
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">CAUTION</p>
