--- a/html/Maintenance/Fuel System Drains.html
+++ b/html/Maintenance/Fuel System Drains.html
@@ -1,4 +1,4 @@
-<p>Refer to Figure 47 for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot’s walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
+<p>Refer to Figure 47 for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot's walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
 
 <p>Fuel system drains and other drains on the engine are shown in Figure 51. </p>
 
