--- a/html/Maintenance/Ground Run Procedures.html
+++ b/html/Maintenance/Ground Run Procedures.html
@@ -1,4 +1,4 @@
-<p>The following are Air Tractor’s recommendations on performing ground engine runs.  These recommendations apply to all Air Tractor aircraft: </p>
+<p>The following are Air Tractor's recommendations on performing ground engine runs.  These recommendations apply to all Air Tractor aircraft: </p>
 
 <ol type="1">
     <li>It is recommended that the hopper be filled with water prior to performing ground runs. </li>
