--- a/html/Maintenance/ITT INSTRUMENT CALIBRATION CHECK.html
+++ b/html/Maintenance/ITT INSTRUMENT CALIBRATION CHECK.html
@@ -1,6 +1,6 @@
     <p><b>Description</b></p>
 
-<p>This section provides instructions for checking the calibration of the ITT indicator for Air Tractor aircraft with Pratt & Whitney PT6A turbine engines.  These instructions are written for use with a Barfield TT1200 Turbine Temperature Test Set.  Other ITT calibration equipment may be used if that equipment is appropriate for use with Air Tractor ITT systems.  When other equipment is used, the operator shall follow the manufacturer’s operating instructions.  Ensure that the test equipment has a current calibration before performing a calibration check of the engine instrument. </p>
+<p>This section provides instructions for checking the calibration of the ITT indicator for Air Tractor aircraft with Pratt & Whitney PT6A turbine engines.  These instructions are written for use with a Barfield TT1200 Turbine Temperature Test Set.  Other ITT calibration equipment may be used if that equipment is appropriate for use with Air Tractor ITT systems.  When other equipment is used, the operator shall follow the manufacturer's operating instructions.  Ensure that the test equipment has a current calibration before performing a calibration check of the engine instrument. </p>
     <p>Approved tolerances for each gauge are different.  Two tables are provided in this supplement showing the tolerances for each engine. </p>
     <p>The ITT system may be in one of two configurations:  with lead resistance or without lead resistance.  Calibration checking instructions for each style are different.  Systems without lead resistance use an electronic indicator and are easily recognized by multiple pin connectors on the back of the instrument.  These systems typically use a 2" instrument and are more common on newer aircraft.  Systems with lead resistance have only two wires connecting the instrument to the engine.  These systems typically use a 3" instrument and are more common on older aircraft. </p>
 
@@ -8,7 +8,7 @@
 
     <p>SCHEDULE INSPECTION</p>
 
-    <ol type=‘1’>
+    <ol type='1'>
         <li>(2 Years)	Calibrate the ITT gauge or follow the procedures within this section to check the calibration. </li>
 </ol>
 
@@ -16,7 +16,7 @@
 
 SYSTEMS WITHOUT LEAD RESISTANCE (Power Required)
 
-<ol type=‘1’>
+<ol type='1'>
     <li>Disconnect aircraft power to the instrument.  The simplest way to do this is to disengage, or pop out, the 5 amp “Engine Instruments" circuit breaker. </li>
     <li>Disconnect at least one of the instrument leads from the engine thermocouple terminal block.  Note which lead was connected to which terminal. </li>
     <li>On the TT1200, set the “FUNCTION" switch to “IND TEST." </li>
@@ -37,7 +37,7 @@ SYSTEMS WITHOUT LEAD RESISTANCE (Power Required)
 
 <p>SYSTEMS WITH LEAD RESISTANCE (Power NOT Required)</p>
 
-<ol type=‘1’>
+<ol type='1'>
     <li></li>Aircraft power should be OFF during this procedure.</li>
     <li>Disconnect the leads from the back of the instrument in the cockpit.  Note which lead connects to which terminal. </li>
     <li>On the TT1200, set the “FUNCTION" switch to “RES MEAS." </li>
@@ -58,62 +58,62 @@ SYSTEMS WITHOUT LEAD RESISTANCE (Power Required)
     <li>Compare the readings from the TT1200 and the instrument.  See the table below for tolerances.  If the instrument is not within acceptable calibration send the instrument to a shop for overhaul and calibration. </li>
 </ol>
 
-<table class=‘plainTableLarge’>
+<table class='plainTableLarge'>
     <tr>
-            <td class=‘plainTableNormalCell centerText’>Engine Model</td>
-            <td class=‘plainTableNormalCell centerText’>Tolerances</td>
-            <td class=‘plainTableNormalCell centerText’>Red Line</td>
-            <td class=‘plainTableNormalCell centerText’>Red Triangle</td>
+            <td class='plainTableNormalCell centerText'>Engine Model</td>
+            <td class='plainTableNormalCell centerText'>Tolerances</td>
+            <td class='plainTableNormalCell centerText'>Red Line</td>
+            <td class='plainTableNormalCell centerText'>Red Triangle</td>
         </tr>
         <tr>
-            <td class=‘plainTableNormalCell centerText’>PT6A-60 Series</td>
-            <td class=‘plainTableNormalCell centerText’>500°C to 750°C
+            <td class='plainTableNormalCell centerText'>PT6A-60 Series</td>
+            <td class='plainTableNormalCell centerText'>500°C to 750°C
                 <p>+/- 30°C</p>
                 <p>750°C to 850°C </p>
                 <p></p>+/- 10°C</p>
                 <p>Beyond 850°C </p>
                 <p>+/- 30°C </p>
             </td>
-            <td class=‘plainTableNormalCell centerText’>Varies
+            <td class='plainTableNormalCell centerText'>Varies
                 <p>+/- 30°C </p>
             </td>
-            <td class=‘plainTableNormalCell centerText’>1000°C 
+            <td class='plainTableNormalCell centerText'>1000°C 
                 <p>+/- 30°C </p>
             </td>
         </tr>
         <tr>
-            <td class=‘plainTableNormalCell centerText’>PT6A-67 Series</td>
-            <td class=‘plainTableNormalCell centerText’>500°C to 750°C
+            <td class='plainTableNormalCell centerText'>PT6A-67 Series</td>
+            <td class='plainTableNormalCell centerText'>500°C to 750°C
                 <p>+/- 30°C</p>
                 <p>750°C to 850°C </p>
                 <p></p>+/- 10°C</p>
                 <p>Beyond 850°C </p>
                 <p>+/- 30°C </p>
             </td>
-            <td class=‘plainTableNormalCell centerText’>Varies
+            <td class='plainTableNormalCell centerText'>Varies
                 <p>+/- 30°C </p>
             </td>
-            <td class=‘plainTableNormalCell centerText’>1000°C 
+            <td class='plainTableNormalCell centerText'>1000°C 
                 <p>+/- 30°C </p>
             </td>
         </tr>
         <tr>
-            <td class=‘plainTableNormalCell centerText’>PT6A-67F</td>
-            <td class=‘plainTableNormalCell centerText’>500°C to 750°C
+            <td class='plainTableNormalCell centerText'>PT6A-67F</td>
+            <td class='plainTableNormalCell centerText'>500°C to 750°C
                 <p>+/- 30°C</p>
                 <p>750°C to 1000°C </p>
                 <p></p>+/- 10°C</p>
                 <p>Beyond 1000°C </p>
                 <p>+/- 30°C </p>
             </td>
-            <td class=‘plainTableNormalCell centerText’>870°C
+            <td class='plainTableNormalCell centerText'>870°C
                 <p>+/- 30°C </p>
             </td>
-            <td class=‘plainTableNormalCell centerText’>1000°C 
+            <td class='plainTableNormalCell centerText'>1000°C 
                 <p>+/- 30°C </p>
             </td>
         </tr>
     </table>
 
     <p><b>Sample Test Card</b></p>
-    <img class=‘imageCentered_3x2’ src=‘img/imgTemplate_3x2.png’>
+    <img class='imageCentered_3x2' src='img/imgTemplate_3x2.png'>
