--- a/html/Maintenance/Installing a New Gill Dry-Charged Battery.html
+++ b/html/Maintenance/Installing a New Gill Dry-Charged Battery.html
@@ -23,7 +23,7 @@
 
         <li>Prior to charging, clean and neutralize any spilled acid on the battery using a solution of baking soda and water. Rinse with clean water.</li>
 
-        <li>Charge battery at an initial charge rate of 3 Amps until all cells are gassing freely and the charge voltage and specific gravity of electrolytes are constant, or the voltage drops, over three successive readings taken at one hour intervals (This procedure may take 18-24 hours with a constant current charger). The charge rate is reduced to 1.5 Amps when the cells start gassing. The fully-charged battery’s electrolyte level should be at the bottom of the split ring with the charger still on. </li>
+        <li>Charge battery at an initial charge rate of 3 Amps until all cells are gassing freely and the charge voltage and specific gravity of electrolytes are constant, or the voltage drops, over three successive readings taken at one hour intervals (This procedure may take 18-24 hours with a constant current charger). The charge rate is reduced to 1.5 Amps when the cells start gassing. The fully-charged battery's electrolyte level should be at the bottom of the split ring with the charger still on. </li>
 
 <p>During the period of charging, the electrolyte temperatures shall be maintained between 60° F and 110° F (15.6° C and 43.3° C). </p>
 
