--- a/html/Maintenance/Main Wheel Alignment.html
+++ b/html/Maintenance/Main Wheel Alignment.html
@@ -4,7 +4,7 @@
 
 <p>The following procedure should be followed to align the main wheels: </p>
 
-<ol type=‘1’>
+<ol type='1'>
     <li>The aircraft is to be fueled, but with empty hopper. Taxi the aircraft a short distance in a straight line to allow the gear legs to assume the natural position. The aircraft should be on paved surface or flat smooth ground.</li>
     <li>A long straight edge is placed across the front of the tires approximately at axle height. This straight edge is supported by blocks, or cans, or both. A 24-inch or larger carpenter square is placed against the straight edge and the outside surface of the tire, and held level with the ground at the axle height.  The tire should be square with the straight edge, or have up to 1/16-inch toe-in, measured at the center-line of the thread of the tire.</li>
     <li>Camber is then measured by placing a protractor on the vertical axis of the wheel through the axle.  Camber should measure 1° to 2°</li>
