--- a/html/Maintenance/Materials Used for Stripping Painting and Preservation.html
+++ b/html/Maintenance/Materials Used for Stripping Painting and Preservation.html
@@ -11,7 +11,7 @@
 
 <p><b><u>Chromated Alkyd Primer Materials</u></b></p>
 
-<table class=‘plainTableLarge’>
+<table class='plainTableLarge'>
     <tr>
         <th class=plainTableHeaderCell><b>Part No.</b></th>
         <th class=plainTableHeaderCell><b>Description</b></th>
@@ -19,20 +19,20 @@
     </tr>
 
     <tr>
-        <td class=‘plainTableNormalCell’>TT-P-1757B</td>
-        <td class=‘plainTableNormalCell’>Yellow zinc chromate primer</td>
-        <td class=‘plainTableNormalCell’>5 gal.</td>
+        <td class='plainTableNormalCell'>TT-P-1757B</td>
+        <td class='plainTableNormalCell'>Yellow zinc chromate primer</td>
+        <td class='plainTableNormalCell'>5 gal.</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell’>TT-T548C</td>
-        <td class=‘plainTableNormalCell’>Toluene (R2K1)</td>
-        <td class=‘plainTableNormalCell’>5 gal.</td>
+        <td class='plainTableNormalCell'>TT-T548C</td>
+        <td class='plainTableNormalCell'>Toluene (R2K1)</td>
+        <td class='plainTableNormalCell'>5 gal.</td>
     </tr>
 </table>
 
 <p><b><u>Surface Preparation Materials</u></b></p>
 
-<table class=‘plainTableLarge’>
+<table class='plainTableLarge'>
     <tr>
         <th class=plainTableHeaderCell><b>Part No.</b></th>
         <th class=plainTableHeaderCell><b>Description</b></th>
@@ -40,40 +40,40 @@
     </tr>
 
     <tr>
-        <td class=‘plainTableNormalCell’>TT-P-1757B</td>
-        <td class=‘plainTableNormalCell’>Yellow zinc chromate primer</td>
-        <td class=‘plainTableNormalCell’>5 gal.r</td>
+        <td class='plainTableNormalCell'>TT-P-1757B</td>
+        <td class='plainTableNormalCell'>Yellow zinc chromate primer</td>
+        <td class='plainTableNormalCell'>5 gal.r</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell’>Turco #5351</td>
-        <td class=‘plainTableNormalCell’>Stripper</td>
-        <td class=‘plainTableNormalCell’>10 gal.</td>
+        <td class='plainTableNormalCell'>Turco #5351</td>
+        <td class='plainTableNormalCell'>Stripper</td>
+        <td class='plainTableNormalCell'>10 gal.</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell’></td>
-        <td class=‘plainTableNormalCell’>Acid Etch</td>
-        <td class=‘plainTableNormalCell’>3 gal.</td>
+        <td class='plainTableNormalCell'></td>
+        <td class='plainTableNormalCell'>Acid Etch</td>
+        <td class='plainTableNormalCell'>3 gal.</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell’></td>
-        <td class=‘plainTableNormalCell’>Alodine</td>
-        <td class=‘plainTableNormalCell’>2 lbs.</td>
+        <td class='plainTableNormalCell'></td>
+        <td class='plainTableNormalCell'>Alodine</td>
+        <td class='plainTableNormalCell'>2 lbs.</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell’></td>
-        <td class=‘plainTableNormalCell’>Isopropyl Alcohol</td>
-        <td class=‘plainTableNormalCell’>2 gal.</td>
+        <td class='plainTableNormalCell'></td>
+        <td class='plainTableNormalCell'>Isopropyl Alcohol</td>
+        <td class='plainTableNormalCell'>2 gal.</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell’></td>
-        <td class=‘plainTableNormalCell’>Phosphoric Acid</td>
-        <td class=‘plainTableNormalCell’>1 fluid oz.</td>
+        <td class='plainTableNormalCell'></td>
+        <td class='plainTableNormalCell'>Phosphoric Acid</td>
+        <td class='plainTableNormalCell'>1 fluid oz.</td>
     </tr>
 </table>
 
 <p><b><u>Internal Oiling Steel Parts</u></b></p>
 
-<table class=‘plainTableLarge’>
+<table class='plainTableLarge'>
     <tr>
         <th class=plainTableHeaderCell><b>Part No.</b></th>
         <th class=plainTableHeaderCell><b>Description</b></th>
@@ -81,8 +81,8 @@
     </tr>
 
     <tr>
-        <td class=‘plainTableNormalCell’></td>
-        <td class=‘plainTableNormalCell’>Linseed Oil</td>
-        <td class=‘plainTableNormalCell’>1 gal.</td>
+        <td class='plainTableNormalCell'></td>
+        <td class='plainTableNormalCell'>Linseed Oil</td>
+        <td class='plainTableNormalCell'>1 gal.</td>
     </tr>
     </table>
