--- a/html/Maintenance/Propeller Replacement.html
+++ b/html/Maintenance/Propeller Replacement.html
@@ -1,1 +1,1 @@
-<p>Reverse propeller removal procedures to install the replacement propeller on the airframe. (Refer to appropriate Hartzell Owner’s Manual). </p>
+<p>Reverse propeller removal procedures to install the replacement propeller on the airframe. (Refer to appropriate Hartzell Owner's Manual). </p>
