--- a/html/Maintenance/Stripping and Repainting Aluminum Parts.html
+++ b/html/Maintenance/Stripping and Repainting Aluminum Parts.html
@@ -1,4 +1,4 @@
-<ol type=‘1’>
+<ol type='1'>
     <li>The paint stripper most effective on urethane paint is Turco #5351. </li>
     <li>The stripper is either sprayed on with a barrel pump or applied on small parts with a large paint brush.  If sprayed on be sure to consider wind direction so that over-spray will not damage surrounding vehicles or aircraft.</li>
     <li>When applying stripper, wear protective clothing and safety goggles.</li>
@@ -8,7 +8,7 @@
     <li>Apply Acid Etch with Scotch Brite pads and scrub metal surfaces thoroughly.  Rinse with cold water. </li>
     <li>Before the part is dry, apply generous amounts of Alodine with a clean white rag.  The Alodine should act within two or three minutes and when rinsed off with cold water should leave a very light gold surface.  Do not leave the Alodine too long or allow it to dry as a dark brown film will result which is undesirable and should be removed and the part reprocessed. </li>
     <li>When the part is completely dry, apply a coat of High Solids Epoxy Primer: 
-        <p>9.1	Always follow manufacturer’s recommended mixing ratio of pigmented component to adduct. </p>
+        <p>9.1	Always follow manufacturer's recommended mixing ratio of pigmented component to adduct. </p>
         <p>9.2.	Surfaces must be clean and free of grease, dirt, oil, rust, fingerprints, and other contaminants to insure optimum adhesion and performance properties.  Parts may be cleaned using an alcohol 	soaked soft white rag. </p>
         <p>9.3.	Apply primer using conventional spray equipment or HVLP spray equipment. </p>
         <p>9.4.	Ideal coating thickness is 0.5 mils dry. </p>
