--- a/html/Maintenance/TORQUE VALUES AND GUIDANCE FOR BOLT INSTALLATION.html
+++ b/html/Maintenance/TORQUE VALUES AND GUIDANCE FOR BOLT INSTALLATION.html
@@ -12,152 +12,152 @@
 
 <p>Torque values for nuts and bolts are shown in Table 1 below.  A specific torque callout in the manual supersedes any value listed here. </p>
 
-<table class=‘plainTableLarge’>
+<table class='plainTableLarge'>
     <tr>
         <th class=plainTableHeaderCell><b>Thread Size</b></th>
         <th class=plainTableHeaderCell><b>Torque Value</b></th>
     </tr>
 
     <tr>
-        <td class=‘plainTableNormalCell centerText’></td>
-        <td class=‘plainTableNormalCell centerText’>Tension Type Nuts
+        <td class='plainTableNormalCell centerText'></td>
+        <td class='plainTableNormalCell centerText'>Tension Type Nuts
             zype Nuts
         </td>
-        <td class=‘plainTableNormalCell centerText’>Shear Type Nuts
+        <td class='plainTableNormalCell centerText'>Shear Type Nuts
         </td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’></td>
-        <td class=‘plainTableNormalCell centerText’>[in-lb]
+        <td class='plainTableNormalCell centerText'></td>
+        <td class='plainTableNormalCell centerText'>[in-lb]
         </td>
-        <td class=‘plainTableNormalCell centerText’>ft-lb]
+        <td class='plainTableNormalCell centerText'>ft-lb]
         </td>
-        <td class=‘plainTableNormalCell centerText’>[in-lb]
+        <td class='plainTableNormalCell centerText'>[in-lb]
         </td> 
-        <td class=‘plainTableNormalCell centerText’>[ft-lb]
+        <td class='plainTableNormalCell centerText'>[ft-lb]
         </td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>10-32</td>
-        <td class=‘plainTableNormalCell centerText’>35-40
+        <td class='plainTableNormalCell centerText'>10-32</td>
+        <td class='plainTableNormalCell centerText'>35-40
         </td>
-        <td class=‘plainTableNormalCell centerText’></td>
-        <td class=‘plainTableNormalCell centerText’>20-25
+        <td class='plainTableNormalCell centerText'></td>
+        <td class='plainTableNormalCell centerText'>20-25
         </td> 
-        <td class=‘plainTableNormalCell centerText’></td>
+        <td class='plainTableNormalCell centerText'></td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>1/4-28</td>
-        <td class=‘plainTableNormalCell centerText’>90-100
+        <td class='plainTableNormalCell centerText'>1/4-28</td>
+        <td class='plainTableNormalCell centerText'>90-100
         </td>
-        <td class=‘plainTableNormalCell centerText’></td>
-        <td class=‘plainTableNormalCell centerText’>30-40
+        <td class='plainTableNormalCell centerText'></td>
+        <td class='plainTableNormalCell centerText'>30-40
         </td> 
-        <td class=‘plainTableNormalCell centerText’></td>
+        <td class='plainTableNormalCell centerText'></td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>5/16-24</td>
-        <td class=‘plainTableNormalCell centerText’>200-225
+        <td class='plainTableNormalCell centerText'>5/16-24</td>
+        <td class='plainTableNormalCell centerText'>200-225
         </td>
-        <td class=‘plainTableNormalCell centerText’></td>
-        <td class=‘plainTableNormalCell centerText’>60-85
+        <td class='plainTableNormalCell centerText'></td>
+        <td class='plainTableNormalCell centerText'>60-85
         </td> 
-        <td class=‘plainTableNormalCell centerText’></td>
+        <td class='plainTableNormalCell centerText'></td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>3/8-24</td>
-        <td class=‘plainTableNormalCell centerText’>300-330
+        <td class='plainTableNormalCell centerText'>3/8-24</td>
+        <td class='plainTableNormalCell centerText'>300-330
         </td>
-        <td class=‘plainTableNormalCell centerText’></td>
-        <td class=‘plainTableNormalCell centerText’>95-110
+        <td class='plainTableNormalCell centerText'></td>
+        <td class='plainTableNormalCell centerText'>95-110
         </td> 
-        <td class=‘plainTableNormalCell centerText’></td>
+        <td class='plainTableNormalCell centerText'></td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>7/16-20</td>
-        <td class=‘plainTableNormalCell centerText’>550-600
+        <td class='plainTableNormalCell centerText'>7/16-20</td>
+        <td class='plainTableNormalCell centerText'>550-600
         </td>
-        <td class=‘plainTableNormalCell centerText’>46-50</td>
-        <td class=‘plainTableNormalCell centerText’>270-300
+        <td class='plainTableNormalCell centerText'>46-50</td>
+        <td class='plainTableNormalCell centerText'>270-300
         </td> 
-        <td class=‘plainTableNormalCell centerText’></td>
+        <td class='plainTableNormalCell centerText'></td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>1/2-20</td>
-        <td class=‘plainTableNormalCell centerText’>800-900
+        <td class='plainTableNormalCell centerText'>1/2-20</td>
+        <td class='plainTableNormalCell centerText'>800-900
         </td>
-        <td class=‘plainTableNormalCell centerText’>67-75</td>
-        <td class=‘plainTableNormalCell centerText’>290-410
+        <td class='plainTableNormalCell centerText'>67-75</td>
+        <td class='plainTableNormalCell centerText'>290-410
         </td> 
-        <td class=‘plainTableNormalCell centerText’></td>
+        <td class='plainTableNormalCell centerText'></td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>9/16-18</td>
-        <td class=‘plainTableNormalCell centerText’>1100-1300
+        <td class='plainTableNormalCell centerText'>9/16-18</td>
+        <td class='plainTableNormalCell centerText'>1100-1300
         </td>
-        <td class=‘plainTableNormalCell centerText’>92-108</td>
-        <td class=‘plainTableNormalCell centerText’>480-600
+        <td class='plainTableNormalCell centerText'>92-108</td>
+        <td class='plainTableNormalCell centerText'>480-600
         </td> 
-        <td class=‘plainTableNormalCell centerText’>40-50</td>
+        <td class='plainTableNormalCell centerText'>40-50</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>5/8-18</td>
-        <td class=‘plainTableNormalCell centerText’>1700-1900
+        <td class='plainTableNormalCell centerText'>5/8-18</td>
+        <td class='plainTableNormalCell centerText'>1700-1900
         </td>
-        <td class=‘plainTableNormalCell centerText’>142-158</td>
-        <td class=‘plainTableNormalCell centerText’>660-780
+        <td class='plainTableNormalCell centerText'>142-158</td>
+        <td class='plainTableNormalCell centerText'>660-780
         </td> 
-        <td class=‘plainTableNormalCell centerText’>55-65</td>
+        <td class='plainTableNormalCell centerText'>55-65</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>3/4-16</td>
-        <td class=‘plainTableNormalCell centerText’>2800-3000
+        <td class='plainTableNormalCell centerText'>3/4-16</td>
+        <td class='plainTableNormalCell centerText'>2800-3000
         </td>
-        <td class=‘plainTableNormalCell centerText’>233-250</td>
-        <td class=‘plainTableNormalCell centerText’>1300-1500
+        <td class='plainTableNormalCell centerText'>233-250</td>
+        <td class='plainTableNormalCell centerText'>1300-1500
         </td> 
-        <td class=‘plainTableNormalCell centerText’>108-125</td>
+        <td class='plainTableNormalCell centerText'>108-125</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>7/8-14</td>
-        <td class=‘plainTableNormalCell centerText’>3500-4000
+        <td class='plainTableNormalCell centerText'>7/8-14</td>
+        <td class='plainTableNormalCell centerText'>3500-4000
         </td>
-        <td class=‘plainTableNormalCell centerText’>292-333</td>
-        <td class=‘plainTableNormalCell centerText’>1500-1800
+        <td class='plainTableNormalCell centerText'>292-333</td>
+        <td class='plainTableNormalCell centerText'>1500-1800
         </td> 
-        <td class=‘plainTableNormalCell centerText’>125-150</td>
+        <td class='plainTableNormalCell centerText'>125-150</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>1-14</td>
-        <td class=‘plainTableNormalCell centerText’>6000-6400
+        <td class='plainTableNormalCell centerText'>1-14</td>
+        <td class='plainTableNormalCell centerText'>6000-6400
         </td>
-        <td class=‘plainTableNormalCell centerText’>500-533</td>
-        <td class=‘plainTableNormalCell centerText’>2200-3300
+        <td class='plainTableNormalCell centerText'>500-533</td>
+        <td class='plainTableNormalCell centerText'>2200-3300
         </td> 
-        <td class=‘plainTableNormalCell centerText’>183-275</td>
+        <td class='plainTableNormalCell centerText'>183-275</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>1-1/8-12</td>
-        <td class=‘plainTableNormalCell centerText’>6000-7000
+        <td class='plainTableNormalCell centerText'>1-1/8-12</td>
+        <td class='plainTableNormalCell centerText'>6000-7000
         </td>
-        <td class=‘plainTableNormalCell centerText’>500-583</td>
-        <td class=‘plainTableNormalCell centerText’>3000-4200
+        <td class='plainTableNormalCell centerText'>500-583</td>
+        <td class='plainTableNormalCell centerText'>3000-4200
         </td> 
-        <td class=‘plainTableNormalCell centerText’>250-350</td>
+        <td class='plainTableNormalCell centerText'>250-350</td>
     </tr>
     <tr>
-        <td class=‘plainTableNormalCell centerText’>1-1/14-12</td>
-        <td class=‘plainTableNormalCell centerText’>0000-12000
+        <td class='plainTableNormalCell centerText'>1-1/14-12</td>
+        <td class='plainTableNormalCell centerText'>0000-12000
         </td>
-        <td class=‘plainTableNormalCell centerText’>750-1000</td>
-        <td class=‘plainTableNormalCell centerText’>5400-6600
+        <td class='plainTableNormalCell centerText'>750-1000</td>
+        <td class='plainTableNormalCell centerText'>5400-6600
         </td> 
-        <td class=‘plainTableNormalCell centerText’>450-550</td>
+        <td class='plainTableNormalCell centerText'>450-550</td>
     </tr>
 </table>
 
 <p><u>Notes:</u></p>
-<ol type=‘1’>
+<ol type='1'>
     <li>This chart applies to all standard or high strength aircraft alloy steel bolts. </li>
     <li>The lower value is used when the bolt is held stationary and torque is applied to the nut. If the torque must be applied to the bolt (holding the nut stationary), use the upper value. </li>
     <li>Tension type nuts are AN310, AN315, AN363, AN365, MS17825, MS20365, MS21042, MS21044, MS21045, MS2104 6. </li>
