--- a/html/Maintenance/Troubleshooting Procedures.html
+++ b/html/Maintenance/Troubleshooting Procedures.html
@@ -154,13 +154,13 @@
 
     <p> d) Replace LCR</p>
 
-<p>Symptom - After an engine start the Generator won’t come on line and the voltage at A1 to the LCR is only about 1 Volt and there is no voltage on pin J of the GCU. </p>
+<p>Symptom - After an engine start the Generator won't come on line and the voltage at A1 to the LCR is only about 1 Volt and there is no voltage on pin J of the GCU. </p>
 
 <p>Probable Cause - There is a discontinuity in the circuit feeding power to the GCU, which includes the wiring, the 15A C/B, Generator Switch, and the Start Switch. </p>
 
 <p>Fix - Make sure that the 15A C/B is not tripped and that the Generator Switch is ON and then proceed to ring out and isolate the discontinuity from A1 of the LCR to pin J. </p>
 
-<p>Symptom - The Generator won’t come on line and the voltage on A1 of the LCR is low (9-16V). </p>
+<p>Symptom - The Generator won't come on line and the voltage on A1 of the LCR is low (9-16V). </p>
 
 <p>Probable Cause - The Voltage Regulator section of the GCU is defective. </p>
 
