--- a/html/Maintenance/Wing Attachment to Fuselage.html
+++ b/html/Maintenance/Wing Attachment to Fuselage.html
@@ -1,4 +1,4 @@
-<p>Details of the wing’s front-spar attachment to the fuselage are shown in Figure 79. The wing’s rear-spar attachment to the fuselage is shown in Figure 81. </p>
+<p>Details of the wing's front-spar attachment to the fuselage are shown in Figure 79. The wing's rear-spar attachment to the fuselage is shown in Figure 81. </p>
 
 <p>Two aluminum and two steel wing-attach angles are used to attach the wing main spar to the fuselage vertical tube just aft of the main spar. There are four AN6-31A bolts that attach each vertical tube to the wing angles. </p>
 
