--- a/html/Maintenance/Wing Center Splice Connection.html
+++ b/html/Maintenance/Wing Center Splice Connection.html
@@ -30,7 +30,7 @@
 
 <p>For appropriate inspection intervals of the wing center splice connection, see the INSPECTION section of this manual. If a new wing is to be installed, contact the factory for wing installation instructions at the time the wing is ordered. </p>
 
-<div class=‘boxCautionLarge’>
-    <p class=‘boxCautionLargeHeader’>CAUTION</p>
-    <p class=‘boxCautionLargeText’>Consult the factory for tools, jigs, and fixtures to ensure proper installation of a new wing.</p>
+<div class='boxCautionLarge'>
+    <p class='boxCautionLargeHeader'>CAUTION</p>
+    <p class='boxCautionLargeText'>Consult the factory for tools, jigs, and fixtures to ensure proper installation of a new wing.</p>
 </div>
