--- a/html/Description/Propeller Tachometer.html
+++ b/html/Description/Propeller Tachometer.html
@@ -1,1 +1,1 @@
-<p>The propeller tachometer displays the propeller-output shaft rotational velocity in revolutions per minute (RPM). This direct-reading tachometer receives its signal from the tachometer-generator that is driven by the propeller-output shaft on the engine’s output gear case.</p>
+<p>The propeller tachometer displays the propeller-output shaft rotational velocity in revolutions per minute (RPM). This direct-reading tachometer receives its signal from the tachometer-generator that is driven by the propeller-output shaft on the engine's output gear case.</p>
