--- a/html/Inspection/Insp_ELECTRICAL SYSTEM.html
+++ b/html/Inspection/Insp_ELECTRICAL SYSTEM.html
@@ -42,7 +42,7 @@
    <tr>
     <td class="cellInspectionNumber">ES9</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect starter-generator brushes per manufacturer’s instructions</td>
+    <td class="cellInspectionText">Inspect starter-generator brushes per manufacturer's instructions</td>
   </tr>
    <tr>
     <td class="cellInspectionNumber">ES10</td>
