--- a/html/Intro/TOC AND NOTES.html
+++ b/html/Intro/TOC AND NOTES.html
@@ -37,5 +37,5 @@
 
 
 <p style="text-align: center; text-decoration: underline; font-weight: bold;">PUBLICATION NOTES</p>
-<p>The June 21, 2018 revision to this manual provides procedures and inspection frequencies that were previously in separate manuals (US, Argentina, Australia, and Canada).  The result of these changes is a single Owner’s Manual for the AT-802/802A series.  The inspection frequencies have been harmonized to be consistent for all AT-802/802A operators.</p>
+<p>The June 21, 2018 revision to this manual provides procedures and inspection frequencies that were previously in separate manuals (US, Argentina, Australia, and Canada).  The result of these changes is a single Owner's Manual for the AT-802/802A series.  The inspection frequencies have been harmonized to be consistent for all AT-802/802A operators.</p>
 <p>The September 1, 2025 revision of this manual was a significant reorganization.  Pages are no longer controlled.  Revisions are to be noted by Section which were numbered.</p>
