--- a/html/Maintenance/Flap Removal.html
+++ b/html/Maintenance/Flap Removal.html
@@ -1,5 +1,5 @@
 <ol type="1">
-    <li>Remove fuselage side-skin immediately inboard of the flap’s leading edge.</li>
+    <li>Remove fuselage side-skin immediately inboard of the flap's leading edge.</li>
     <li>Partially extend the flap to gain easy access to the bolt that attaches the flap push-rod to the flap.</li>
     <li>While holding up the trailing edge of the flap, remove the AN4 bolt that attaches the flap push-rod to the flap.</li>
     <li>Allow the trailing edge of the flap to rest on the boom hangers. </li>
