--- a/html/Maintenance/Propeller Removal.html
+++ b/html/Maintenance/Propeller Removal.html
@@ -1,14 +1,14 @@
-<ol type=‘1’>
+<ol type='1'>
     <li>Ensure battery switch (BATT) is OFF. </li>
     <li>Turn fuel valve selector lever to OFF. </li>
     <li>Remove engine side cowlings, top cowling, and bottom cowling. </li>
     <li>Disconnect batteries. </li>
     <li>Remove exhaust stacks.  Cover engine exhaust ducts to prevent FOD from entering engine. </li>
-    <li><img class=‘imageCentered_3x2’ src=‘img/imgTemplate_3x2.png’><img class=‘imageCentered_3x2’ src=‘img/imgTemplate_3x2.png’></li>
+    <li><img class='imageCentered_3x2' src='img/imgTemplate_3x2.png'><img class='imageCentered_3x2' src='img/imgTemplate_3x2.png'></li>
     <p>Disconnect the engine beta linkage and carbon block assembly from the beta ring.</p>
     <p>Exhaust Stack</p>        <p>Beta Linkage and Ring</p>
-    <li>Remove propeller. (Refer to appropriate Hartzell Owner’s Manual).  (Removal will require the use of a Beta Ring Puller as described in the Hartzell Owner’s Manual). </li>
+    <li>Remove propeller. (Refer to appropriate Hartzell Owner's Manual).  (Removal will require the use of a Beta Ring Puller as described in the Hartzell Owner's Manual). </li>
 </ol>
 
-<p><img class=‘imageCentered_3x2’ src=‘img/imgTemplate_3x2.png’></p>
+<p><img class='imageCentered_3x2' src='img/imgTemplate_3x2.png'></p>
 <p>Beta Ring Puller</p>
